<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fullscreen"
            android:summary="@string/pref_fullscreen_summary"
            android:title="@string/pref_fullscreen_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wake"
            android:summary="@string/pref_term_wake_summary"
            android:title="@string/pref_term_wake_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wifi"
            android:summary="@string/pref_term_wifi_summary"
            android:title="@string/pref_term_wifi_title" />
        <EditTextPreference
            android:defaultValue="300"
            android:inputType="number"
            android:key="screenBuffer"
            android:singleLine="true"
            android:summary="@string/pref_screenbuffer_summary"
            android:title="@string/pref_screenbuffer_title" />
        <EditTextPreference
            android:defaultValue="20"
            android:inputType="number"
            android:key="commandhistory"
            android:singleLine="true"
            android:summary="@string/pref_cmdhistory_summary"
            android:title="@string/pref_cmdhistory_title" />
        <EditTextPreference
            android:defaultValue="/sdcard/AndroMudLog.txt"
            android:key="logPath"
            android:singleLine="true"
            android:summary="@string/pref_log_summary"
            android:title="@string/pref_log_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/postLogin">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="usePostLogin"
            android:summary="@string/pref_use_postLogin_summary"
            android:title="@string/pref_use_postLogin_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="postLoginAsPassword"
            android:summary="@string/pref_postlogin_as_password_summary"
            android:title="@string/pref_postlogin_as_password_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_session">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="bellVibrate"
            android:summary="@string/pref_bellVibrate_summary"
            android:title="@string/pref_bellVibrate_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification"
            android:summary="@string/pref_notification_summary"
            android:title="@string/pref_notification_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_character_title">
        <EditTextPreference
            android:defaultValue="11"
            android:inputType="number"
            android:key="fontsize"
            android:singleLine="true"
            android:summary="@string/pref_fontsize_summary"
            android:title="@string/pref_fontsize_title" />
        <ListPreference
            android:defaultValue="UTF-8"
            android:key="encoding"
            android:summary="@string/pref_encoding_summary"
            android:title="@string/pref_encoding_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="forceBold"
            android:summary="@string/pref_force_bold_summary"
            android:title="@string/pref_force_bold_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_button_shortcut_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="shakeforurl"
            android:summary="@string/pref_shakeforurl_summary"
            android:title="@string/pref_shakeforurl_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="useShortcut"
            android:summary="@string/pref_useshortcut_summary"
            android:title="@string/pref_useshortcut_title" />
        <EditTextPreference
            android:key="shortcutkey1"
            android:title="@string/pref_button_shortcut1" />
        <EditTextPreference
            android:key="shortcutkey2"
            android:title="@string/pref_button_shortcut2" />
        <EditTextPreference
            android:key="shortcutkey3"
            android:title="@string/pref_button_shortcut3" />
        <EditTextPreference
            android:key="shortcutkey4"
            android:title="@string/pref_button_shortcut4" />
        <EditTextPreference
            android:key="shortcutkey5"
            android:title="@string/pref_button_shortcut5" />
    </PreferenceCategory>

</PreferenceScreen>