<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"></TextView>

        <EditText
            android:id="@+id/NameValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/NameText"></EditText>

        <TextView
            android:id="@+id/HostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NameValue"
            android:text="@string/host"></TextView>

        <EditText
            android:id="@+id/HostValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NameValue"
            android:layout_alignLeft="@+id/NameValue"
            android:layout_toRightOf="@+id/HostText"
            android:singleLine="true" />

        <TextView
            android:id="@+id/PortText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HostValue"
            android:text="@string/port" />

        <EditText
            android:id="@+id/PortValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HostValue"
            android:layout_alignLeft="@+id/HostValue"
            android:layout_toRightOf="@+id/PortText"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/MudfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PortValue"
            android:text="@string/mudfile" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PortValue"
            android:layout_alignLeft="@+id/HostValue"
            android:layout_toRightOf="@+id/MudfileText">

            <EditText
                android:id="@+id/filepath"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PortValue"
                android:layout_toRightOf="@+id/MudfileText"
                android:layout_weight="1" />

            <Button
                android:id="@+id/browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse" />
        </LinearLayout>

        <TextView
            android:id="@+id/postLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout01"
            android:layout_toRightOf="@+id/more"
            android:text="@string/postLogin" />

        <EditText
            android:id="@+id/postLoginValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout01"
            android:layout_toRightOf="@+id/postLoginText" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postLoginValue"
            android:layout_toRightOf="@+id/more"
            android:text="@string/save" />
    </RelativeLayout>
</ScrollView>
